# financial-news-platform

./: .gitignore  ai_analyzer.py  api_server.py  create_cik_list.py  create_company_map.py  db_schema_manager.py  main.py  pyproject.toml  requirements.txt  run_local_test.py  ui_app.py  utils.py
Scripts/: backfill_all_data.py  backfill_financials.py  db_schema_manager.py
common/: db_models.py
filing_processor_function/: ai_analyzer.py  exhibit_extractor.py  main.py  requirements.txt
fmp_analyst_scraper_function/: main.py
fmp_analyst_scraper_function/config/: company_map.json
fmp_eod_logger_function/: main.py
fmp_eod_logger_function/config/: ciks.txt  tickers.txt
functions/daily_updater/: main.py
functions/filing_processor/: ai_analyzer.py  exhibit_extractor.py  main.py
functions/fmp_analyst_scraper/: main.py
functions/fmp_eod_logger/: main.py
functions/master_analyzer/: db_models.py  main.py
functions/rss_aggregator/: main.py
rss_aggregator_function/: main.py  requirements.txt
ui/: ui_app.py
